--- a/web/src/main/webapp/html/01_hello.html
+++ b/web/src/main/webapp/html/01_hello.html
@@ -1,6 +1,6 @@
 <!-- MarkUp Language 주석문 -->
 
-<!-- HTML(Hyper Text MarkUp Language) : 태그(Tag)를 사용하여 웹문서를 구조적으로 표현하기 위한 언어 -->
+<!-- HTML(Hyper Text MarkUp Language) : 태그(Tag)를 사용하여 이미지를 포함한 웹문서를 구조적으로 표현하기 위한 언어 -->
 <!-- => 브라우저 엔진에 의해 해석되어 실행(출력)되는 언어 - CSL(Client Script Language) : HTML, CSS, JavaScript -->
 
 <!-- 태그를 사용하여 웹문서(웹에서 사용되는 문서 - HTML 파일) 작성 - 태그는 대소문자 미구분 -->
@@ -10,7 +10,7 @@
 
 <!-- DOCTYPE : 웹문서의 종류 및 버전을 표현 - HTML5를 사용하여 작성된 웹문서 -->
 <!DOCTYPE html>
-<!-- html 태그 : HTML 문서를 작성하기 위해 사용하는 최상위 태그  -->
+<!-- html 태그 : HTML 문서를 작성하기 위해 사용하는 최상위 태그(root tag)  -->
 <!-- => 하위태그 : head, body -->
 <html>
 <!-- head 태그 : HTML 문서에 대한 정보를 제공하기 위한 태그 -->
@@ -25,6 +25,7 @@
 <!-- title 태그 : HTML 문서의 제목을 설정하기 위한 태그 --> 
 <title>HTML</title>
 </head>
+
 <!-- body 태그 : 웹문서의 내용(Content)을 출력하기 위한 영역을 제공하기 위한 태그 - Document -->
 <!-- => 하위태그 : header(머릿부), navi(메뉴), section(몸체부), article(본문), aside(보조문), footer(꼬릿부), h1, p, img, form 등  -->
 <!-- => body 태그의 하위태그를 박스모델(Box Model) 태그로 표현할 수 있으며 블럭 레벨 태그와
