--- a/web/src/main/webapp/html/06_tbody.html
+++ b/web/src/main/webapp/html/06_tbody.html
@@ -3,32 +3,67 @@
 <head>
 <meta charset="UTF-8">
 <title>HTML</title>
+<style type="text/css">
+table {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+th, td {
+	border: 1px solid black;
+	width: 100px;
+	padding: 20px;
+	text-align: center;
+}
+
+caption {
+	font-size: 24px;
+	line-height: 40px;
+	letter-spacing: 15px;
+}
+</style>
 </head>
 <body>
-	<h1>dl 태그</h1>
+	<h1>tbody 태그</h1>
 	<hr>
-	<!-- dl 태그 : 정의 목록(Definition List)을 출력하기 위한 태그 -->
-	<!-- => 하위태그 : dt, dd -->
-	<h3>유채방</h3>
-	<dl>
-		<!-- dt 태그 : 정의 용어(Definition Term)를 출력하기 위한 태그 -->
-		<dt>대상</dt>
-		<!-- dd 태그 : 정의 설명(Definition Description)를 출력하기 위한 태그 -->
-		<dd>도미토리, 동성(또는 가족) 1팀</dd>
-		
-		<dt>크기</dt>
-		<dd>4인실</dd>
-		
-		<dt>주의사항</dt>
-		<dd>공동 취사실 및 욕실(화장실)</dd>
-		
-		<dt>비용</dt>
-		<dd>비수기 : 1인 20,000원</dd>
-		<dd>성수기 : 1인 25,000원</dd>
-	</dl>
+	<!-- HTML5에서는 표를 구조적으로 표현하기 위한 thead 태그, tbody 태그, tfoot 태그 사용 -->
+	<!-- summary 속성 : 표에 대한 설명을 속성값으로 설정 -->
+	<table summary="객실 안내">
+		<!-- caption 태그 : 표 제목을 출력하기 위한 태그 -->
+		<caption>객실표</caption>
+		<thead>
+			<tr>
+				<th>건물명</th><th>방이름</th><th>크기</th><th>가격</th>
+			</tr>
+		</thead>
+		<tfoot>
+			<tr>
+				<td colspan="4">바깥채 전체를 독채로 대여합니다.</td>
+			</tr>
+		</tfoot>
+		<tbody>
+			<tr>
+				<!-- rowspan 속성 : 병합할 행의 갯수를 속성값으로 설정 -->
+				<td rowspan="3">요안도라</td><td>유채방</td><td>4인실</td><td rowspan="2">20,000원</td>
+			</tr>
+			<tr>
+				<td>동백방</td><td>2인실</td>
+			</tr>
+			<tr>
+				<!-- colspan 속성 : 병합할 열의 갯수를 속성값으로 설정 -->
+				<td>가족실</td><td colspan="2">60,000원(최대 4인)</td>
+			</tr>		
+		</tbody>
+		<!--  
+		<tfoot>
+			<tr>
+				<td colspan="4">바깥채 전체를 독채로 대여합니다.</td>
+			</tr>
+		</tfoot>
+		-->
+	</table>
 </body>
 </html>
-
 
 
 
