--- a/web/src/main/webapp/html/07_alink.html
+++ b/web/src/main/webapp/html/07_alink.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>a 태그</h1>
 	<hr>
-	<!-- a 태그 : 클릭 이벤트로 다른 웹문서(웹프로그램)을 요청하기 위한 태그 -->
+	<!-- a 태그 : 클릭 이벤트로 다른 웹문서(웹프로그램)을 요청하기 위한 태그 - GET 방식의 요청(a 태그는 무조건)-->
 	<!-- => 하이퍼링크(Hyper Link) 기능을 제공하는 태그 - 페이지 이동 -->
 	<!-- href 속성 : 클릭 이벤트가 발생될 경우 요청한 웹문서(웹프로그램)의 URL 주소를 속성값으로 설정 -->
 	<!-- => 태그내용(텍스트 또는 이미지)을 클릭한 경우 클라이언트 브라우저의 주소창의 URL
