--- a/web/src/main/webapp/html/13_form.html
+++ b/web/src/main/webapp/html/13_form.html
@@ -29,8 +29,18 @@
 	<!-- => application/x-www-form-urlencoded : 사용자 입력값을 문자값으로 전달 -->
 	<!-- => multipart/form-data : 사용자 입력값을 원시값으로 전달 - 파일을 입력받아 전달 -->
 	<!-- => text/plain : 사용자 입력값을 문자값으로 전달 -->
-	<form action="13_action.html" method="get" enctype="application/x-www-form-urlencoded">
-	
+	<form action="13_action.html" method="post" enctype="application/x-www-form-urlencoded">
+		아이디 : <input type="text" name="id"><br>	
+			<!-- 입력태그 : 사용자로부터 값을 입력받기 위한 태그 : input, select, textarea 등 -->
+		비밀번호 : <input type="password" name="passwd"	><br>
+		
+		<!-- 제출이벤트(Submit Event)를 발생하는 태그 : input, button 등 -->
+		<!-- => 제출이벤트가 발생되면 form 태그가 동작되어 브라우저의 주소창이 action 속성값으로 설정된 URL 주소로 변경되어
+		웹프로그램을 요청하며 입력태그에 입력된 값을 전달하여 실행결과를 제공받아 출력된다.-> 페이지 이동 -->
+		<!-- button 태그 : 버튼을 출력하는 태그 -->
+		<!-- type 속성 : button, submit(기본값), reset 중 하나를 속성값으로 설정 -->
+		<!-- =>type 속성값을 [submit]으로 설정한 경우 버튼을 클릭하면 제출이벤트가 발생된다. -->
+		<button type="submit">로그인</button>
 	</form>
 </body>
 </html>
