--- a/web/src/main/webapp/html/13_action.html
+++ b/web/src/main/webapp/html/13_action.html
@@ -7,6 +7,21 @@
 <body>
 	<h1>form 태그</h1>
 	<hr>
+	<p> form 태그를 이용하여 요청한 웹프로그램 - 전달값(사용자 입력값)을 전달받아 처리한다.</p>
+	<!-- action페이지는 내가 직접 처리하는 페이지가 아니라 입력페이지(form태그페이지)를 통해 요청하면 그 값을 받아서 처리하는 처리페이지이다. -->
+	<!-- action페이지 = 처리페이지 -->
+	
+	<p><a href="13_form.html?name=홍길동">[입력페이지 이동]</a></p>
+		<!-- a 태그를 사용하면 클릭 이벤트를 이용해 웹프로그램을 GET 방식으로 요청 -->
+		<!-- => href 속성값으로 요청한 웹프로그램의 URL 주소를 설정 -->
+		<!-- 요청 웹프로그램에 값을 전달하고자 할 경우 질의문자열("?"문자 사용)을 작성하여 전달
+		<!-- => URL 주소는 영문자, 숫자, 일부 특수문자로만 작성 가능하므로 질의문자열을 작성할 경우
+		영문자, 숫자, 일부 특수문자를 제외한 문자값은 정상적인 전달이 불가능하다.-->
+		<!-- => 영문자, 숫자, 일부 특수문자를 제외한 문자값은 부호화 처리하면 
+		정상적인 전달 가능 -> 부호화처리는 JavaScript가 한다. -->
+		<p><a href="13_form.html?name=HongGillDong">[입력페이지 이동]</a></p>
+		
+		
 	
 </body>
 </html>
