--- a/web/src/main/webapp/html/14_input.html
+++ b/web/src/main/webapp/html/14_input.html
@@ -24,20 +24,21 @@
 	<!-- type 속성값 -->
 	<!-- => hidden : 입력태그를 숨겨 사용자로부터 값을 입력받지 않고 요청 웹프로그램에게 필요한 값 전달 -->	
 	<!-- => text : 문자값을 입력받아 전달 -->	
-	<!-- => password : 문자값을 입력받아 전달 - 입력값이 특정문자로 변환되어 표시 -->
+	<!-- => password : 문자값을 입력받아 전달 - 입력값이 특정문자로 변환되어 표시 -->	
 	<!-- => radio : name 속성값이 같은 입력태그 중 하나를 선택하여 전달 -->	
-	<!-- checkbox : name 속성값이 같은 입력태그 중 한 개 이상을 선택하여 전달 -->
-	<!-- file : 파일을 입력받아 전달 -->
-	<!-- email(HTML5) : 이메일을 입력받아 전달 - 이메일 형식에 검증 처리 -->
-	<!-- number : 숫자 형식의 문자값을 입력받아 전달(증가 또는 감소 버튼 제공) 
-					- 숫자형식의 문자값만 입력 가능하여 최소값 및 최대값 검증 가능 -->
-	<!-- tel(HTML5) : 전화번호 형시그이 문자값을 입력받아 전달 - 스마트기기의 입력패드의 변경 -->
-	<!-- serach(HTML5) : 검색 관련 문자값을 입력받아 전달 - 스마트 기기의 자동완성 기능 사용 -->
-	<!-- color(HTML5) :  -->
-	<!-- range<HTML5) :  -->
-	<!-- date : -->
-	<!-- time(HTML5) : -->
-	<!-- datetime-local(HTML5) :  -->
+	<!-- => checkbox : name 속성값이 같은 입력태그 중 한개 이상을 선택하여 전달 -->	
+	<!-- => file : 파일을 입력받아 전달 -->	
+	<!-- => email(HTML5) : 이메일을 입력받아 전달 - 이메일 형식에 검증 처리 -->	
+	<!-- => number(HTML5) : 숫자 형식의 문자값을 입력받아 전달(증가 또는 감소 버튼 제공) 
+		- 숫자 형식의 문자값만 입력 가능하여 최소값 및 최대값 검증 가능 -->	
+	<!-- => tel(HTML5) : 전화번호 형식의 문자값을 입력받아 전달 - 스마트기기의 입력패드로 변경 -->	
+	<!-- => url(HTML5) : URL 형식의 문자값을 입력받아 전달 - 스마트기기의 입력패드로 변경 -->	
+	<!-- => search(HTML5) : 검색 관련 문자값을 입력받아 전달 - 스마트기기의 자동 완성기능 시용 -->	
+	<!-- => color(HTML5) : 색을 선택하여 색상값(#RRGGBB)을 전달 -->	
+	<!-- => range(HTML5) : 등급을 선택하여 등급값 전달 - min 속성과 max 속성으로 등급의 범위 설정 -->
+	<!-- => date(HTML5) : 날짜 형식의 문자값을 입력받아 전달 - 날짜를 선택할 수 있는 박스모델 제공 -->
+	<!-- => time(HTML5) : 시간 형식의 문자값을 입력받아 전달 - 시간를 선택할 수 있는 박스모델 제공 -->
+	<!-- => datetime-local(HTML5) : 날짜와 시간 형식의 문자값을 입력받아 전달 - 날짜와 시간를 선택할 수 있는 박스모델 제공 -->
 	<form action="#" method="post">
 		<input type="hidden" name="num" value="1000">
 		<p>아이디 : <input type="text" name="id" size="10" maxlength="20" autofocus="autofocus" required="required"></p>
