--- a/web/src/main/webapp/html/14_input.html
+++ b/web/src/main/webapp/html/14_input.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>input 태그</h1>
 	<hr>
-	<!-- input 태그 : 사용지로부터 값을 입력받기 위한 태그 - 입력태그 -->
+	<!-- input 태그 : 사용자로부터 값을 입력받기 위한 태그 - 입력태그 -->
 	<!-- type 속성 : 값을 입력받기 위한 형태를 속성값으로 설정 -->
 	<!-- name 속성 : 태그의 이름을 속성값으로 설정 - 전달값을 구분하기 위한 식별자 -->
 	<!-- value 속성 : 입력태그의 초기값을 속성값으로 설정 -->
