--- a/web/src/main/webapp/html/11_audio.html
+++ b/web/src/main/webapp/html/11_audio.html
@@ -23,6 +23,7 @@
 	<!-- source 태그 : 멀티미디어 파일을 제공하기 위한 태그 -->
 	<!-- type 속성 : 파일의 형태(MimeType)를 속성값으로 설정 -->
 	<!-- 브라우저마다 재생할 수 있는 오디오 태그(멀티미디어파일이)가 다르기 때문에 위의 태그로 재생이 안되면 아래의 태그로 재생하라는 말.-->
+	<!-- Mimetype(마임타입) :  -->
 	<source src="/web/html/audio/horse.mp3" type="audio/mp3">
 	<source src="/web/html/audio/horse.ogg" type="audio/ogg">
 	
