--- a/web/src/main/webapp/html/08_anchor.html
+++ b/web/src/main/webapp/html/08_anchor.html
@@ -7,16 +7,17 @@
 <body>
 	<h1 id="top">a 태그</h1>
 	<hr>
-	<!-- a 태그의 href 속성값으로 URL 주소를 설정하면 클릭 이벤트에 의해 페이지 이동 -->
+	<!-- a 태그의 href 속성값으로 URL 주소를 설정하면 클릭 이벤트에 의해 페이지가 이동함 -->
 	<!-- URL 주소뒤에 #기호를 사용하여 태그 식별자(id 속성값)를 설정하면 해당 식별자의 태그로 출력위치를 이동 (= 앵커) -->
 	<!-- 앵커(Anchor) : 출력 페이지에서 특정 태그의 위치로 스크롤을 이동하는 기능 -->
 	<a href="/web/html/08_anchor.html#product">제품소개</a>&nbsp;&nbsp;&nbsp;
-	<a href="">구매후기</a>&nbsp;&nbsp;&nbsp;
+	<a href="08_anchor.html#review">구매후기</a>&nbsp;&nbsp;&nbsp;
 	<!-- 동일한 웹문서에서 스크롤을 이동할 경우 웹문서 요청 웹문서의 URL 주소 생략 가능 -->
-	<a href="">주의사항</a>
+	<a href="#message">주의사항</a>
 	<hr>
 	<h3 id="product">제품소개</h3>
-		<!-- id 속성 : 태그를 구분하기 위한 식별자를 속성값으로 설정. 식별자는 중복되면 안됨. -->
+		<!-- id 속성 : 태그를 구분하기 위한 식별자를 속성값으로 설정. 식별자는 중복되면 안됨.
+						(따라서, id는 중복이 안되어서 사용 가능하지만, 이름은 중복되니까 사용X) -->
 	<p>아주 좋은 제품입니다.</p>
 	<p>아주 좋은 제품입니다.</p>
 	<p>아주 좋은 제품입니다.</p>
