--- a/web/src/main/webapp/html/09_map.html
+++ b/web/src/main/webapp/html/09_map.html
@@ -17,7 +17,7 @@
 		<area alt="트위터" shape="rect" coords="0,0,129,117" href="https://twitter.com" target="_blank">
 		<area alt="페이스북" shape="rect" coords="129,0,248,117" href="https://facebook.com" target="_blank">
 			<!-- area 태그 : 이미지에서 영역을 설정하기 위한 태그 -->
-			<!-- shape 속성 : 영역을 구분하기 위한 도형을 속성값으로 설정 - 속성값 : reat(기본값-사각형), circle(원), poly(타원) 등 -->
+			<!-- shape 속성 : 영역을 구분하기 위한 도형을 속성값으로 설정 - 속성값 : rect(기본값-사각형), circle(원), poly(타원) 등 -->
 			<!-- coords 속성 : 영역을 구분하기 위한 도형의 좌표값을 속성값으로 설정(좌표값은 그림판에서 쉽게 확인 가능함)-->
 			
 	
