--- a/web/src/main/webapp/html/13_form.html
+++ b/web/src/main/webapp/html/13_form.html
@@ -7,19 +7,20 @@
 <body>
 	<h1>form 태그</h1>
 	<hr>
-	<!-- form 태그 : 웹프로그램을 요청하여 사용자로부터 입력받은 값을 전달하는 태그 -->
-	<!-- => 하위태그로 반드시 사용자로부터 값을 입력받기 위한 입력태그와 제출 이벤트을
+	<!-- form 태그 : "웹프로그램을 요청"(웹문서X)하여 사용자로부터 입력받은 값을 전달하는 태그 -->
+	<!-- => 하위태그로 반드시 사용자로부터 값을 입력받기 위한 입력태그와 제출 이벤트를
 	발생하는 태그를 반드시 작성 -->
 	<!-- 제출 이벤트(Submit Event) : form 태그를 사용하여 웹프로그램을 요청하기 위한 이벤트 -->
 	
 	<!-- action 속성 : form 태그를 사용하여 요청할 웹프로그램의 URL 주소를 속성값으로 설정 -->
+	<!-- => 만약, action 속성을 생략한 경우에는 현재 요청 웹프로그램의 URL 주소를 사용하여 다시 요청한다. -->
 	
-	<!-- method 속성 : 웹프로그램을 요청하는 요청방식(GET - 기본 또는 POST)을 속성값으로 설정 -->
+	<!-- method 속성 : 웹프로그램을 요청하는 요청방식(GET(기본값) 또는 POST)을 속성값으로 설정 -->
 	<!-- => 웹프로그램의 요청방식에 따라 사용자 입력값을 전달하는 방법이 상이 -->
 	
-	<!-- GET : 사용자 입력값을 URL 주소의 질의문자열(QueryString)으로 전달 -->
-	<!-- => 보안을 필요로 하지 않는 소량의 값을 전달할 때 사용하는 요청방식 -->
-	<!-- POST : 사용자 입력값을 리퀘스트 메세지의 몸체부에 저장하여 전달 -->
+	<!-- GET : 사용자 입력값을 URL 주소의 질의문자열(QueryString)으로 전달 [ex. a 태그] -->
+	<!-- => 보안을 필요로 하지 않는 소량의 값을 전달할 때 사용하는 요청방식 (많은 양을 전달할 수 없음.) -->
+	<!-- POST : 사용자 입력값을 리퀘스트 메세지의 몸체부에 저장하여 전달 [ex. form 태그] -->
 	<!-- => 보안을 필요로 하거나 대량의 값을 전달할 때 사용하는 요청방식 -->
 	<!-- 리퀘스트 메세지(Request Message) : 클라이언트의 모든 정보를 담아 웹프로그램에게 전달하기 위한 객체 -->
 	<!-- => 머릿부(Header)와 몸체부(Body)로 구성되어 있으며 GET 방식으로 웹프로그램을 요청한 
