--- a/web/src/main/webapp/html/14_input.html
+++ b/web/src/main/webapp/html/14_input.html
@@ -9,7 +9,7 @@
 	<hr>
 	<!-- input 태그 : 사용자로부터 값을 입력받기 위한 태그 - 입력태그 -->
 	<!-- type 속성 : 값을 입력받기 위한 형태를 속성값으로 설정 -->
-	<!-- name 속성 : 태그의 이름을 속성값으로 설정 - 전달값을 구분하기 위한 식별자 -->
+	<!-- name 속성 : 태그의 이름을 속성값으로 설정 - 전달값을 구분하기 위한 식별자(자바스크립트에서는 태그를 구별하는 객체역할도 할 것.) -->
 	<!-- value 속성 : 입력태그의 초기값을 속성값으로 설정 -->
 	<!-- size 속성 : 입력태그의 크기를 속성값으로 설정 -->
 	<!-- maxlength 속성 : 최대 입력 가능한 문자의 갯수를 속성값으로 설정 -->
@@ -20,8 +20,12 @@
 	<!-- => placeholder 속성이 구현된 입력태그에 입력값이 입력되면 설명문 자동 소멸 -->
 	<!-- readonly 속성 : 입력태그를 읽기 전용으로 사용하기 위한 속성 - 속성값 생략 가능 -->
 	<!-- disabled 속성 : 입력태그를 비활성화 처리하기 위한 속성 - 속성값 생략 가능 -->
+	<!-- checked 속성 : 우선 선택을 제공하기 위한 속성 - 속성값 생략 가능 -->
+	<!-- min 속성 : 입력 가능한 최소값을 속성값으로 설정 -->
+	<!-- max 속성 : 입력 가능한 최대값을 속성값으로 설정 -->
 	
-	<!-- type 속성값 -->
+	
+	<!-- *type 속성값 -->
 	<!-- => hidden : 입력태그를 숨겨 사용자로부터 값을 입력받지 않고 요청 웹프로그램에게 필요한 값 전달 -->	
 	<!-- => text : 문자값을 입력받아 전달 -->	
 	<!-- => password : 문자값을 입력받아 전달 - 입력값이 특정문자로 변환되어 표시 -->	
@@ -61,7 +65,20 @@
  		<p>기상시간 : <input type="time" name="time"></p>
  		<p>알람 : <input type="datetime-local" name="alarm"></p>
  		
+ 		
+ 		<!-- form 태그에는 입력태그 외에 제출 이벤트를 발생시키는 태그가 반드시 존재해야 한다. -->
+ 		<!-- 제출 이벤트가 발생해야 form 태그가 실행되어 웹프로그램을 요청해 입력값을 전달 한다. -->
+ 		<!-- input 태그의 type 속성값을 [submit]으로 설정하여 태그(버튼)을 클릭한 경우 제출 이벤트가 발생함. -->
+ 		<input type="submit" value="회원가입">
  		<button type="submit">회원가입</button>
+ 		
+ 		
+ 		<!-- form 태그의 하위태그로 입력태그의 입력값을 초기화 처리하기 위한 기능의 태그 작성(Reset Event) -->
+ 		<!-- => 초기화 이벤트(Reset Event) -->
+ 		<!-- input 태그의 type 속성값을 [reset]으로 설정하여 태그(버튼)을 클릭한 경우 초기화 이벤트가 발생함. -->
+ 		<input type="reset" value="다시입력">
+ 		<button type="reset">다시입력</	button>
+ 		
  	</form>
 </body>
 </html>
