--- a/web/src/main/webapp/css/03_cascade.html
+++ b/web/src/main/webapp/css/03_cascade.html
@@ -13,12 +13,32 @@ p{
 	color: green;
 } /* CSS 스타일은 선언순서에 의해 단계적으로 적용되어 출력된다. - 이때, 기존 스타일은 폐기된다(오버라이드)*/
 
+li{
+	color: blue !important;
+}	
+/* !important : 단계적 적용을 무시하고 최우선적으로 스타일을 적용하기 위한 속성값. */
+
+ul{
+	font-size: 20px;
+	color: lime;
+}	/* 단계적 적용의 예외 상황임. CSS 스타일 선언 순서가 ul이 뒤지만 글자색은 여전히 파랑으로 출력됨. 
+=> HTML 태그의 계층적 순서에 의해 스타일이 적용되었기 때문. => 자식 엘리먼트의 CSS 스타일이 나중에 적용된다.*/
+
+li{
+	color: aqua;
+}
 </style>
 </head>
 <body>
 	<h1>CSS 스타일의 단계적 적용과 상속</h1>
 	<hr>
 	<p>브라우저에 출력될 아주 중요한 내용입니다.</p>
+	<hr>
+	<ul>
+		<li>아주 중요한 내용-1</li>
+		<li>아주 중요한 내용-2</li>
+		<li>아주 중요한 내용-3</li>
+	</ul>
 
 </body>
 </html>
