--- a/web/src/main/webapp/css/04_format.html
+++ b/web/src/main/webapp/css/04_format.html
@@ -5,7 +5,7 @@
 <title>HTML</title>
 <link href="/web/css/04_style.css" type="text/css" rel="stylesheet">
 	<!-- link 태그 : 외부파일을 불러와 내용을 연결하는 기능을 제공하는 태그 -->
-		<!-- => CSS 파일을 불러와 HTML 문서에 연결하여 스타일 시트 적용 -->
+		<!-- => CSS 파일을 불러와(CSS파일 외에 다른 파일도 가능) HTML 문서에 연결하여 스타일 시트 적용 -->
 		<!-- => CSS 파일에 설정된 스타일을 사이트를 구성하는 모든 HTML 문서에 동일하게 적용하기 위해 사용 -->
 		<!-- => 사이트 구현시 모든 페이지에 일관성 있는 스타일 적용 -->
 	<!-- href 속성 : HTML 문서에 연결할 외부파일의 URL 주소를 속성값으로 설정 -->
