--- a/web/src/main/webapp/css/06_drive_selector.html
+++ b/web/src/main/webapp/css/06_drive_selector.html
@@ -5,7 +5,8 @@
 <title>CSS</title>
 <style type="text/css">
 /* 후손 선택자 : 부모 엘리먼트를 기준으로 "모든 깊이"의 태그를 이용하여 후손 엘리먼트로 선택 */
-/* 형식)부모선택자 후손선택자 */
+/* 후손 : 자식+자식의자식+자식의자식의자식 다 포함 (≠ 자식)*/
+/* 형식)부모선택자 후손선택자 */ /* => 부모 엘리먼트와 후손 엘리먼트 사이를 띄워쓰기 */
 #super1 div { color: purple; }
 
 /* 자식 선택자 : 부모 엘리먼트를 기준으로 "첫번째 깊이"의 태그를 이용하여 자식 엘리먼트로 선택 */
@@ -16,7 +17,9 @@
 /* => 필터 선택자는 클래스 선택자를 사용하여 구현 */
 /* 형식)선택자.클래스선택자 */
 #super3 div { color: orange; } 
-#super3 div.choice { color: lime; }
+#super3 div.choice { color: lime; } /* div 태그 안의 choice 필터 선택자 */
+#super3 div .choice { color: lime; } /* 이렇게되면 .choice는 필터가 아니라 .choice라는 이름의 후손이 됨*/
+
 
 /* 형제 선택자 : 선택자에 의해 선택된 엘리먼트 다음에 위치한 같은 깊이의 태그를 이용하여 형제 엘리먼트로 선택 */
 /* 형식)선택자 ~ 선택자 */
