--- a/web/src/main/webapp/css/05_basic_selector.html
+++ b/web/src/main/webapp/css/05_basic_selector.html
@@ -18,7 +18,7 @@ h2 { color: green; }
 p { color: blue; }
 
 /* 클래스 선택자 : 태그에 설정된 class 속성값을 이용하여 엘리먼트로 선택 */
-/* => 태그 선택자와 구분하기 위해 앞에 [.]을 붙여 표현 */
+/* => 태그 선택자와 구분하기 위해 앞에 [.]을 붙여 표현!!! */
 /* => 동일한 class 속성값을 사용하는 다수의 엘리먼트에 동일한 스타일 적용 */
 .text1 { color: maroon; }
 .text2 { color: pink; }
