--- a/web/src/main/webapp/html/14_input.html
+++ b/web/src/main/webapp/html/14_input.html
@@ -15,9 +15,9 @@
 	<!-- maxlength 속성 : 최대 입력 가능한 문자의 갯수를 속성값으로 설정 -->
 	<!-- autofocus 속성(HTML5) : 입력태그에 입력촛점(Focus)을 제공하는 속성 - 속성값 생략 가능 -->
 	<!-- required 속성(HTML5) : 필수 입력값을 설정하기 위한 속성 - 속성값 생략 가능 -->
-	<!-- => required 속성이 구현된 입력태그에 입력값이 없는 경우 form 태그 미동작 -->
+		<!-- => required 속성이 구현된 입력태그에 입력값이 없는 경우 form 태그 미동작 -->
 	<!-- placeholder 속성(HTML5) : 입력태그의 입력값에 대한 설명을 속성값으로 설정 -->
-	<!-- => placeholder 속성이 구현된 입력태그에 입력값이 입력되면 설명문 자동 소멸 -->
+		<!-- => placeholder 속성이 구현된 입력태그에 입력값이 입력되면 설명문 자동 소멸 -->
 	<!-- readonly 속성 : 입력태그를 읽기 전용으로 사용하기 위한 속성 - 속성값 생략 가능 -->
 	<!-- disabled 속성 : 입력태그를 비활성화 처리하기 위한 속성 - 속성값 생략 가능 -->
 	<!-- checked 속성 : 우선 선택을 제공하기 위한 속성 - 속성값 생략 가능 -->
@@ -25,7 +25,7 @@
 	<!-- max 속성 : 입력 가능한 최대값을 속성값으로 설정 -->
 	
 	
-	<!-- *type 속성값 -->
+	<!-- *** type 속성값 *** -->
 	<!-- => hidden : 입력태그를 숨겨 사용자로부터 값을 입력받지 않고 요청 웹프로그램에게 필요한 값 전달 -->	
 	<!-- => text : 문자값을 입력받아 전달 -->	
 	<!-- => password : 문자값을 입력받아 전달 - 입력값이 특정문자로 변환되어 표시 -->	
@@ -37,7 +37,7 @@
 		- 숫자 형식의 문자값만 입력 가능하여 최소값 및 최대값 검증 가능 -->	
 	<!-- => tel(HTML5) : 전화번호 형식의 문자값을 입력받아 전달 - 스마트기기의 입력패드로 변경 -->	
 	<!-- => url(HTML5) : URL 형식의 문자값을 입력받아 전달 - 스마트기기의 입력패드로 변경 -->	
-	<!-- => search(HTML5) : 검색 관련 문자값을 입력받아 전달 - 스마트기기의 자동 완성기능 시용 -->	
+	<!-- => search(HTML5) : 검색 관련 문자값을 입력받아 전달 - 스마트기기의 자동 완성기능 사용 -->	
 	<!-- => color(HTML5) : 색을 선택하여 색상값(#RRGGBB)을 전달 -->	
 	<!-- => range(HTML5) : 등급을 선택하여 등급값 전달 - min 속성과 max 속성으로 등급의 범위 설정 -->
 	<!-- => date(HTML5) : 날짜 형식의 문자값을 입력받아 전달 - 날짜를 선택할 수 있는 박스모델 제공 -->
