--- a/web/src/main/webapp/html/15_label.html
+++ b/web/src/main/webapp/html/15_label.html
@@ -20,6 +20,7 @@
 	</p>
 		
 	<h3>label 태그 사용</h3>
+	<!-- label 태그를 사용한 경우 label 태그를 입력하면 입력촛점을 제공한다. -->
 	<hr>
 	<p><label>이름 : <input type="text" name="name"></label></p>
 	<p>취미 : 
