--- a/web/src/main/webapp/html/16_textarea.html
+++ b/web/src/main/webapp/html/16_textarea.html
@@ -8,6 +8,9 @@
 	<h1>textarea 태그</h1>
 	<hr>
 	<!-- textarea 태그 : 다수행의 문자를 입력받기 위한 태그 : 입력태그 -->
+	<!-- => 태그내용이 textarea 태그의 초기값으로 설정 -->
+	<!-- rows 속성 : 입력태그의 행의 갯수(높이)를 속성값으로 설정 -->
+	<!-- cols 속성 : 입력태그의 열의 갯수(폭)를 속성값으로 설정 -->
 	<form method="post"></form>
 	<table>
 		<tr>
