--- a/web/src/main/webapp/css/18_background_image.html
+++ b/web/src/main/webapp/css/18_background_image.html
@@ -5,7 +5,7 @@
 <title>CSS</title>
 <style type="text/css">
 div{
-	background-image: url("/web/css/imaes/bg-img1.png");
+	background-image: url("/web/css/images/bg-img1.png");
 	/* background-image : 배경이미지 관련 스타일 속성 */
 	/* 속성값 : url 함수를 사용하여 이미지 파일의 url 주소 설정 */
 	/* 이미지가 박스모델의 폭 또는 높이보다 작은 경우 가로방향(X) 또는 세로 방향*(Y)로 이미지 반복 출력 */
