--- a/web/src/main/webapp/css/11_font1.html
+++ b/web/src/main/webapp/css/11_font1.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 .font1{
 	/* font-size : 글자크기에 대한 스타일 속성 - 기본크기 : 16px*/
-	/* 속성값(단위) : px(기본), pt, em, %, 키워드(small, medium(16px), large 등)*/
+	/* 속성값(단위) : px(기본-고정형), pt, em(해상도에 따라 글자크기가 변함-반응형), %, 키워드(small, medium(16px), large 등)*/
 	/* 글자크기 관련 키워드는 medium(16px)를 기준으로 1.2배씩 증가 또는 감소 */
 	font-size: 14px;
 }
@@ -29,7 +29,7 @@
 	/* => http://pxtoem.com 사이트 참조 (em >> px,  px >> em 으로 변환 가능 사이트)*/ 
 	
 	font-weight: bold;
-	/*font-weight : 글자 굵기에 대한 스타일 속성 -  100~900(기본:400), 키워드(normal, bold, )*/
+	/*font-weight : 글자 굵기에 대한 스타일 속성 -  100~900(기본:400), 키워드(normal, bold(600), )*/
 }
 
 .font5{
