--- a/web/src/main/webapp/css/13_space.html
+++ b/web/src/main/webapp/css/13_space.html
@@ -21,9 +21,11 @@ div{
 /* => 태그내용이 박스모델의 폭을 벗어나 출력 처리된다.*/
 
 .space3{ white-space: nowrap; }
-
+/* nowrap : 다수의 공백을 하나의 공백으로 처리하여 출력하고 박스모델보다 큰 태그내용은 자동 줄바꿈 없이 그대로 출력 */
 
 .space4{ white-space: pre-wrap; }
+/* pre-wrap : 다수의 공백을 다수의 공백으로 처리하여 출력하고 박스모델보다 큰 태그내용은 자동 줄바꿈 처리하여 출력 */
+
 
 </style>
 </head>
