--- a/web/src/main/webapp/css/25_box2.html
+++ b/web/src/main/webapp/css/25_box2.html
@@ -12,7 +12,7 @@ div{
 	background: green;
 }
 
-/* border-radius : 박스모델 외고가선 모서리 관련 스타일 속성 */
+/* border-radius : 박스모델 외고가선 "모서리" 관련 스타일 속성 */
 /* 속성값 : px, % => 박스모델 외곽선 모서리에 원을 그려 둥글게 표현 */
 .radius1 { border-radius: 10px }
 .radius2 { border-radius: 30px }
