--- a/web/src/main/webapp/css/34_table.html
+++ b/web/src/main/webapp/css/34_table.html
@@ -8,7 +8,7 @@
 table{
 	border: 1px solid black;
 } 
- => table의 border는 자식에게 상속안됨. 따라서 테이블 테두리만 외곽선이 그려짐*/
+ =>\border는 자식에게 상속안됨(+background도 상속안됨.). 따라서 테이블 테두리만 외곽선이 그려짐*/
 
 /* 
 th{
