--- a/web/src/main/webapp/JS/01_hello.html
+++ b/web/src/main/webapp/JS/01_hello.html
@@ -3,35 +3,66 @@
 <head>
 <meta charset="UTF-8">
 <title>JavaScript</title>
+
+<!-- 자바스크립트 자동 완성 기능을 제공받기 위해 이클립스에 Tern 플러그인 설치 -->
+<!-- Help >> Install New Software... >> work with : http://oss.opensagres.fr/tern.repository/1.2.0 입력 (안되면 1.1.0버전으로 설치) -->
+<!-- 지울때는  help >> Install New Software... >> already installed >> tern으로 시작하는 모든것, debugger 시작되는 2개, embedded로 시작되는 2개 모두 지우기-->
+ 
+<!-- Tern 플러그인을 사용하기 위해  Web 프로젝트를 Tern 프로젝트로 변환 -->
+<!-- => 프로젝트 >> 오른쪽 버튼 클릭(메뉴) >> Configure >> Convert to Tern Project >> Modules에서 Browser와 jQuery 선택 -->
+<!-- Conver to Tern Project는 한번하면 그 다음에는 안해도되기 때문에 삭제 후 다시 설치하면 안타나날 수도 있음. 
+그때  Modules 확인은 properties >> Client-side-Javascript >> tern >> Browser, jQuery 선택후 적용 -->
+
+<!-- script 태그를 사용하여 JavaScript Source File를 불러와 HTML 문서에 포함 -->
+<!-- => 웹사이트를 구성하는 모든 웹문서에 동일한 기능(함수)을 제공하기 위해 사용 -->
+<script type="text/javascript" src="/web/js/01_hello.js"></script>
+
 <!-- script 태그 : 스크립트 언어를 사용하여 프로그램을 작성하는 영역을 제공하는 태그 -->
+<!-- => 웹문서에 script 태그를 여러번 선언하여 자바스크립트 작성 - 순차적으로 실행 -->
 <script type="text/javascript">
-//자바스크립트의 주석문은 자바와 동일하다.
+//자바스트립트의 주석문와 자바와 동일
 
-//자바스크립트는 한 줄에 작성된 코드를 하나의 명령으로 인식하여 처리한다.
-//=> 따라서 명령 마지막에 ; 생략 가능.
-
-//자바스크립트는 객체지향 프로그램 언어로 객체를 이용하여 프로그램을 작성한다.
-//=> 객체의 속성(Property)와 함수(Method)를 이용하여 명령을 작성해 실행한다.
-
-//* console 객체 : 브라우저 콘솔을 표현하기 위해 제공되는 내장객체
-//console.log(message) : 브라우저 콘솔의 메세지를 출력하는 메소드
-console.log("Hello.JavaScript!!!");
-
-//* window 객체 : 브라우저를 표현하기 위한 내장객체
-//* window.alert(message) : 메세지창(경고창)을 생성하여 메세지를 출력하는 메소드(함수)
-//=> window 객체를 생략하여 메소드호출 가능
-window.alert("Hello.JavaScript!!!");
-alert("Hello.JavaScript!!!");
+//자바스크립트는 한 줄에 작성된 코드를 하나의 명령으로 인식하여 처리
+// => 명령 마지막에 ; 생략 가능
 
 
+//자바스크립트는 객체 지향 프로그래밍 언어로 객체를 이용하여 프로그램 작성
+// => 객체의 속성(Property)와 함수(Method)를 이용하여 명령을 작성하여 실행
+
+//console 객체 : 브라우저 콘솔을 표현하기 위해 제공되는 내장객체
+//console.log(message) : 브라우저 콘솔에 메세지를 출력하는 메소드
+//console.log("Hello, JavaScript!!!");
+
+//window 객체 : 웹브라우저를 표현하기 위해  제공되는 내장객체
+//window.alert(message) : 메세지창(경고창)을 생성하여 메세지를 출력하는 메소드(함수)
+// => window 객체를 생략하여 메소드 호출 가능
+//window.alert("Hello, JavaScript!!!");
+
+//alert("head 태그에 작성된 자바스크립트 명령");
 </script>
 </head>
 <body>
+	<!-- 
+	<script type="text/javascript">
+	alert("body 태그에 작성된 자바스크립트 명령");
+	</script>
+	-->
 	<h1>자바스크립트 작성</h1>
 	<hr>
-	<p>자바스크립트(JavaScript): 웹페이지에서 발생된 이벤트를 처리하기 위한 기능을 제공하는 스크립트 프로그래밍 언어
-	- 클라이언트에서 해석되어 실행</p>
-	<p>자바스크립트 표준 규약은 ES15(ECMAScript)까지 구현되었으나 일반적으로 ES6까지만 사용한다.</p>
-
+	<p>자바스크립트(JavaScript) : 웹페이지에서 발생된 이벤트를 처리하기 위한 기능을 제공하는
+	스크립트 프로그래밍 언어 - 클라이언트에서 해석되어 실행</p>
+	<p>자바스크립트 표준 규약은 ES15(ECMAScript15)까지 구현되었으나 일반적으로 
+	ES6(ECMAScript6)을 이용하여 작성</p>
+	<hr>
+	<!-- button 태그의 type 속성값을 [button]으로 설정하면 버튼 출력 - 이벤트 미발생 -->
+	<!-- HTML 태그에 onXXX 속성은 이벤트 리스너 속성으로 이벤트 처리 명령(JavaScript)을 속성값으로 설정 -->
+	<!-- <button type="button" onclick="alert('이벤트 처리 명령 실행');">버튼을 눌러보세요.</button> -->
+	
+	<!-- 태그의 이벤트 리스너 속성값으로 자바스트립트 함수(이벤트 처리 함수)를 호출하여 사용 -->
+	<button type="button" onclick="eventHandle();">버튼을 눌러보세요.</button>
+	
+	<script type="text/javascript">
+	//alert("body 태그에 작성된 자바스크립트 명령");
+	</script>
 </body>
 </html>
