--- a/web/src/main/webapp/JS/06_control.html
+++ b/web/src/main/webapp/JS/06_control.html
@@ -22,7 +22,7 @@
 	
 	//alert(typeof(num));//string
 	
-	//isNaN(value) : 매개변수로 전달받은 값을 숫자형으로 형변환 가능하면 [false]를 반환하고
+	//isNaN(value) : is Not a Number - 매개변수로 전달받은 값을 숫자형으로 형변환 가능하면 [false]를 반환하고
 	//숫자형으로 형변환 불가능하면 [true]를 반환하는 함수
 	if(isNaN(num)) {
 		alert("입력값이 숫자가 아닙니다.");
@@ -32,12 +32,13 @@
 	*/
 	
 	//학생 성적에 대한 총점,평균,학점을 계산하여 출력
+	/*
 	var kor=98, eng=80, mat=91;//학생 성적
 	
 	var tot=kor+eng+mat;//총점 계산
 	var ave=tot/3;//평균 계산
 	
-	var grade="";
+	var grade="";	
 	//parseInt(value) : 매개변수로 전달값을 숫자값을 정수값으로 변환하여 반환하는 함수
 	switch (parseInt(ave/10)) {
 	case 10: 
@@ -49,6 +50,39 @@
 	}
 	
 	alert("총점 = "+tot+", 평균 = "+ave+", 학점 = "+grade);
+	*/
+	
+	
+	//1~100 범위의 정수들의 합계를 계산하여 출력
+	/*
+	var tot=0;
+	for(i=1;i<=100;i++){
+		tot+=i;
+	}
+	alert("1~100범위의 정수들의 합계 = "+tot);
+	*/
+	
+	
+	//A4 용지를 반으로 계속 접어 펼쳤을 경우 사각형 모양이 500개 이상이 되려면 몇 번 접으면 되는지 계산하여 출력
+	/*
+	var cnt=0, gae=1;
+	while(true){
+		cnt++;
+		gae*=2;
+		if(gae>=500) break;
+	}
+	alert(cnt+"번 접으면 "+gae+"개의 사각형 모양이 만들어집니다.");
+	*/
+	
+	
+	//1~10범위의 정수 중 홀수만 출력
+	var result=" ";
+	for(i=1;i<=10;i++){
+		if(i%2==0) continue;
+		result+=i+" ";	//변수에 저장된 문자값에 새로운 문자값을 결합하여 저장
+	}
+	alert("1~10범위의 홀수 : "+result);
+	
 	</script>
 </body>
 </html>
