--- a/web/src/main/webapp/JS/02_variable1.html
+++ b/web/src/main/webapp/JS/02_variable1.html
@@ -15,19 +15,19 @@
 	 
 	<script type="text/javascript">
 	//변수 선언 - 변수에 저장된 값이 없는 경우 변수는 [undefined] 자료형으로 표현
-	//var num;
-	//alert(num);//undefined
+	//var num; // 선언만 하고 값은 없음. 값이 없는 변수는 자바스크립트에서 가치가 X
+	//alert(num); //undefined
 	
-	//변수 선언 및 초기값 저장 - 변수에 숫자값이 저장된 경우 [number] 자료형으로 표현
+	//변수 선언 및 초기값 저장 1 - 변수에 숫자값이 저장된 경우 [number] 자료형으로 표현
 	//var num=10;
 	//alert(num);
 	
 	/*
-	//변수 선언 및 초기값 저장 - 변수에 문자값이 저장된 경우 [string] 자료형으로 표현
-	// => 자바스크립트에서 문자형 리터럴(문자값)은 ' ' 또는 " " 기호를 사용하여 표현
+	//변수 선언 및 초기값 저장 2 - 변수에 문자값이 저장된 경우 [string] 자료형으로 표현
+	// => 자바스크립트에서 문자형 리터럴(문자값)은 ' ' 또는 " " 기호를 사용하여 표현 (둘중 뭘 사용하든 상관X)
 	var num="10";
 	//alert(num);
-	alert("num = "+num);//+ 연산자를 사용하여 문자값 결합
+	alert("num = "+num); // + 연산자를 사용하여 문자값 결합
 	*/
 
 	/*
