--- a/web/src/main/webapp/JS/03_variable2.html
+++ b/web/src/main/webapp/JS/03_variable2.html
@@ -34,7 +34,7 @@
 	
 	//const 키워드로 변수를 선언한 경우 동일한 이름의 변수 선언이 불가능하며 초기값 변경도 불가능
 	/*
-	const num=100; //= 상수(Constant Variable)
+	const num=100; //= 상수 변수(Constant Variable)(=상수 : 리터럴 대신 이름 부여하기 위해 사용)
 	alert("num = "+num);
 	
 	const num=100;
@@ -73,10 +73,10 @@
 	
 	let num=100;
 	//alert("num = "+num);
-	//문자값을 표현하기 위해 ' ' 또는 " " 기호 대신 ` ` 기호를 사용하여 표현 가능 - ES6
+	//문자값을 표현하기 위해 ' ' 또는 " " 기호 대신 ` `(백틱) 기호를 사용하여 표현 가능 - ES6
 	//alert(`num = `+num);
 	
-	//`(백틱) 기호로 표현된 문자값에서는 ${변수} 형식으로 변수값을 제공받아 출력 가능 
+	// `(백틱) 기호로 표현된 문자값에서는 ${변수} 형식으로 변수값을 제공받아 출력 가능 
 	alert(`num = ${num}`);
 	</script> 
 </body>
