--- a/web/src/main/webapp/JS/05_typecast.html
+++ b/web/src/main/webapp/JS/05_typecast.html
@@ -17,23 +17,24 @@
 	//+연산자는 두 피연산자의 자료형이 숫자형인 경우 산술 연산 처리한다.
 	//alert(20+10);	//30
 	
-	//+연산자는 두 피연산자 중 하나의 자료형이 문자형인 경우 모든 피연산자를 문자값으로 변환하여 결합 처리한다.
+	//+연산자는 두 피연산자 중 하나라도 자료형이 문자형인 경우 모든 피연산자를 문자값으로 변환하여 결합 처리한다.
 	//alert("20"+10);	//2010
 	//alert(20+"10");	//2010
 	//alert("20"+"10"); //2010
 	
-	//+연산자를 제외한 산술 연산자는 모든 피연산자를 무조건 숫자값으로 변환하여 산술처리한다.
+	//+연산자를 제외한 산술 연산자(*, /, -)는 모든 피연산자를 무조건 숫자값으로 변환하여 산술처리한다.
 	//alert(20*10); //200
 	//alert("20"*10) //200
 	//alert("20"-10) //10
 	
-	//NaN(Not a Number): 숫자값이 아닙니다. => 숫자값으로 변환할 수 없는 문자값인 경우 제공되는 상수
+	//=> 이때 문제 발생 >> NaN(Not a Number): 숫자값이 아닙니다. => 숫자값으로 변환할 수 없는 문자값인 경우 제공되는 상수
 	//=> NaN 상수를 연산처리하면 NaN 결과 제공
 	//alert(20-"abc"); //NaN
 	
 	//논리값을 산술연산하면 false=0, true=1 로 변환되어 연산처리한다.
-	//=> 숫자값을 비교 연산한 경우 0은 flase로 변환되고 0 이외의 숫자값은 true 로 변환하여 연산 처리한다.
+	//=> 숫자값을 [비교 연산 & Not 연산]한 경우 0은 flase로 변환되고 0 이외의 숫자값은 true 로 변환하여 연산 처리한다.
 	//alert(20+true); //21
+	//alert(!5); //!(Not 연산)=> false
 	
 	
 	//alert("20"+10);	//2010 - 문자값 결합
@@ -41,8 +42,6 @@
 	//String(value) : 매개변수로 전달받은 값을 문자값으로 변환하여 반환하는 함수
 	//Boolean(value) : 매개변수로 전달받은 값을 논리값으로 변환하여 반환하는 함수
 	alert(Number("20")+10);	//30 - 강제 형변환을 이용해 산술 연산
-	
-	
 	
 	</script>
 	</body>
