--- a/web/src/main/webapp/JS/06_control.html
+++ b/web/src/main/webapp/JS/06_control.html
@@ -9,7 +9,7 @@
 	<hr>
 	<!-- 제어문 - 프로그램의 흐름을 변경하기 위한 사용하는 명령 -->
 	<p>선택문 - if, switch</p>
-	<p>반복문 - for, while</p>
+	<p>반복문 - for(단, 향상된 for문은 없음), while</p>
 	<p>기타 - break, continue</p>
 	
 	<script type="text/javascript">
