--- a/web/src/main/webapp/JS/04_operator.html
+++ b/web/src/main/webapp/JS/04_operator.html
@@ -9,7 +9,7 @@
 	<hr>
 	<!-- 연산자 우선 순위에 의한 분류 -->
 	<p>최우선 연산자 : (), [], {}, . </p>
-	<p>단항 연산자 : +(positive), -(negative), ++, --, !(Not), new(객체생성시), typeof(변수자료형)</p>
+	<p>단항 연산자 : +(positive), -(negative), ++, --, !(Not), new(객체생성시), typeof(변수를 자료형으로 제공)</p>
 	<p>산술 연산자 : *, /, %, +, -</p>
 	<p>관계 연산자 : &gt;, &gt;=, &lt;, &lt;=, ==, !=, ===, !==</p>
 	<p>논리 연산자 : &amp;&amp;, ||</p>
