--- a/web/src/main/webapp/JS/09_argument.html
+++ b/web/src/main/webapp/JS/09_argument.html
@@ -46,7 +46,7 @@
 	}
 	
 	//자바스크립트에서는 매개변수와 상관없이 함수명으로 함수호출이 가능하다.
-	//total();
+	total();
 	//total(10,20,30); //결과가 출력됨.
 	total(10,20,30,40); //결과가 출력됨.
 	
