--- a/web/src/main/webapp/JS/16_eval.html
+++ b/web/src/main/webapp/JS/16_eval.html
@@ -8,6 +8,7 @@
 	<h1>내장함수 - eval 함수</h1>
 	<hr>
 	<p>eval(stirng) : 매개변수로 문자값을 전달받아 자바스크립트 명령으로 변환하여 실행하는 함수
+	eval()은 전역 범위(Scope)에서 동작하기 때문에 함수뿐만 아니라 변수도 접근이 가능</p>
 	
 	<script type="text/javascript">
 	/*
@@ -30,7 +31,8 @@
 	//eval 함수를 사용하여 변수에 저장된 문자값을 실행
 	//=> 함수가 저장된 문자값(변수)은 자바스크립트 명령으로 변환되어 함수가 먼저 선언되므로 앞과 뒤에 ( ) 기호를 사용하여 우선처리한다.
 	//alert("변수의 자료형 = "+typeof(eval("("+display+")")));	//출력 : 변수의 자료형 = function
-	eval("("+display))(); //문자값으로 저장된 함수를 eval 함수를 사용하여 선언한 후 직접 호출한 것.
+	//eval("("+display+")")(); //문자값으로 저장(display(변수))된 함수를 eval 함수를 사용하여 선언한 후 직접 호출한 것.
+	eval(display)();
 
 	</script>
 
