--- a/web/src/main/webapp/JS/07)function.html
+++ b/web/src/main/webapp/JS/07)function.html
@@ -10,7 +10,7 @@
 	<p>함수(Function) : 매개변수로 값을 전달받아 가공 처리하여 결과값을 반환하는 기능을 제공</p>
 	<p>자바스크립트에서는 "함수를 선언"해야만 함수를 호출하여 함수에 작성된 명령을 실행하여 결과값을 반환받아 사용
 	<hr>
-	<p>자바스크립트에서는 함수 선언방법에 따라 선언함수와 익명함수로 구분
+	<p>자바스크립트에서는 함수 선언방법에 따라 선언함수와 익명함수로 구분</p>
 	<p>선언함수 : 함수명을 명시하여 선언하는 함수</p>
 	<p>익명함수 : 함수명을 명시하지 않고 선언하는 함수</p>
 	
@@ -30,23 +30,23 @@
 	//display();	//함수 호출 - 함수에 작성된 명령 실행
 	//display()
 	
-	//alert(typeof(display));		//함수의 자료형을 출력해주세요.(경고창을 이용해서 출력됨) => function 이 출력됨.(함수형)
+	//alert(typeof(display));	//함수의 자료형을 출력해라는 명령.(경고창을 이용해서 출력됨) => "function" 이 출력됨.(함수형)
 	//alert(display);	//함수명에 저장된 선언함수가 출력됨.
 	
 	
-	//익명함수 - 함수명(함수를 구분하기 위한 식별자)을 명시하지 않고여 함수 선언
+	//익명함수 - 함수명(함수를 구분하기 위한 식별자)을 명시하지 않고 함수 선언
 	//형식) (function(매개변수, 매개변수, ...){ 명령; 명령; ...})(값, 값, ...);
-	//=> 식별자가 없으니 함수를 호출 할수가 없는데...? => 익명함수는 함수를 선언할 때 함수를 호출하여 사용한다(선언하자마자 호출해야함). 그때 한번만 호출해서 사용하는것.
+	//=> 식별자가 없으니 함수를 호출 할수가 없는데...? => 익명함수는 함수를 선언할 때 바로 함수를 호출하여 사용한다(선언하자마자 호출해야함). 그때 한번만 호출해서 사용하는것.
 	/*
 	(function() {
 		alert("익명함수의 명령 실행");
 	})(); 	
 	*/
-	//주의!) function함수에 (소괄호) 꼭 쳐야 익명함수가 먼저 실행됨.
+	//주의!) function함수에 (소괄호) 꼭 쳐야 익명함수가 먼저 실행됨. (사칙연산에서 괄호를 사용하는 것과 비슷함)
 	
 	/*
 	//변수에 익명함수를 저장 - 함수변수
-	//=> 함수는 내부적으로 값으로 처리되므로 변수에 저장 가능하다.
+	//=> JS에서 함수는 내부적으로 값으로 처리되므로 변수에 저장 가능하다.
 	var display=function(){
 		alert("익명함수의 명령 실행222")
 	}
@@ -56,7 +56,7 @@
 	//형식)  함수변수명(값, 값, ...)
 	display();
 	
-	alert(diaplay);	//함수변수값 출력 - 함수변수에 저장된 익명함수 출력됨. 변수의 자료형은 function
+	alert(diaplay);	//함수변수값 출력 - 함수변수에 저장된 익명함수 출력됨. 변수의 자료형 : function
 	*/
 	
 	/*
@@ -70,7 +70,7 @@
 	*/
 	
 	/*
-	//익명함수를 선언하여 변수에 저장하면 명령으로 처리되어 함수 선언 전 호출 불가능
+	//익명함수를 선언하여 변수에 저장하면 명령으로 처리되기 때문에 함수 선언 전 호출 불가능
 	//=> 아무곳이나 함수 호출 못함. 무조건 명령 후에 함수 호출만 가능.
 	display();	//함수 선언 전 함수 호출은 불가능
 	var display=function(){
@@ -83,17 +83,17 @@
 	var display=function printf(){
 		alert("익명함수의 명령 실행@");
 	}
-	//=> 선언함수를 변수에 저장가능하지만 함수명으로는 함수 호출이 불가능 한 것을 볼 수있음.
-	//==> 함수변수를 이용하여 함수 호출 가능
+	//=> 선언함수를 변수에 저장가능하지만 이렇게 되면 함수명(printf)으로는 함수 호출이 불가능 한 것을 볼 수 있음.
+	//==> 하지만 함수변수명(display)를 이용하면 함수 호출이 가능하다.
 	
 	//printf(); => 에러발생
-	display();
+	//display(); => 함수 호출 
 	*/
 	
 	//ES6에서는 람다 표현식을 이용한 화살표함수 추가
 	//=> 코드를 간결하게 표현하여 가독성 증가시킴
 	//형식) (매개변수, 매개변수) => { 명령; 명령; ...}
-	//=> 함수에 작성된 명령이 하나인 경우 { }기호를 생략 가능하다. (일종의 익명함수라고 생각하면됨.)
+	//=> 함수에 작성된 명령이 하나인 경우 { }기호는 생략 가능하다. (일종의 익명함수라고 생각하면됨.)
 	//=> 변수에 화살표함수를 저장하고 변수를 이용하여 함수 호출한다. (함수가 바뀌면 안되기 때문에 대체로 var 보다 const를 많이 쓴다.)
 	//function과 같은 말 사용X
 	const display = () => {alert("화살표함수의 명령 실행");}
