--- a/web/src/main/webapp/JS/19_parse.html
+++ b/web/src/main/webapp/JS/19_parse.html
@@ -45,8 +45,8 @@
 	*/
 	
 	var num="100abc";
-	//parseInt 함수를 사용하면 매개변수로 전달받은 문자값의 앞부분의 숫자만 잘라내어 정수값으로 변환하여 반환.
-	//단, 뒷부분의 숫자는 못함.
+	//parseInt 함수를 사용하면 매개변수로 전달받은 문자값의 앞부분의 숫자만 잘라내어 정수값으로 변환하여 반환.(문자값이 포함되어 있더라도)
+	//단, 문자값이 앞부분에 있고 숫자가 뒷부분에 있을때, 뒷부분의 숫자는 못함.
 	//alert(parseInt(num)+200);	//100+200 //출력 : 300
 	
 	//Number 함수를 사용하면 매개변수에 전달받은 문자값에 숫자외 문자가 존재할 경우 NaN 발생
