--- a/web/src/main/webapp/JS/02_variable1.html
+++ b/web/src/main/webapp/JS/02_variable1.html
@@ -11,7 +11,7 @@
 	<p>자바스크립트는 변수를 선언하지 않아도 값을 저장하여 사용 가능하지만 변수를 선언하는 것을 권장</p>
 	<p>형식)var 변수명 = 초기값</p>
 	<p>변수에 저장되는 값에 따라 변수의 자료형이 자동으로 변환</p>
-	<p>자바스크립트 자료형 - 숫자형(number), 문자형(string), 논리형(boolean), 함수형(function), 객체형(object), undefined
+	<p>자바스크립트 자료형 - 숫자형(number), 문자형(string), 논리형(boolean), 함수형(function), 객체형(object), undefined</p>
 	 
 	<script type="text/javascript">
 	//변수 선언 - 변수에 저장된 값이 없는 경우 변수는 [undefined] 자료형으로 표현
@@ -38,7 +38,7 @@
 	alert(typeof(num));//string - 문자형 변수
 	*/
 	
-	//변수에 논리값(false 또는 true)이 저장된 경우 [boolean] 자료형으로 표현
+	//변수 선언 및 초기값 저장 3 - 변수에 논리값(false 또는 true)이 저장된 경우 [boolean] 자료형으로 표현
 	//var num=false;
 	//alert(typeof(num));//boolean - 논리형 변수
 	
@@ -52,7 +52,7 @@
 	//num=10;
 	//alert("num = "+num);
 	
-	//자바스트립트 변수에는 함수 저장 가능 - 자료형 : function
+	//변수 선언 및 초기값 저장 4 - 자바스트립트 변수에는 함수 저장 가능 - 자료형 : function
 	/*
 	var fun=function() {
 		alert("함수의 명령 실행");
@@ -60,7 +60,7 @@
 	alert(typeof(fun));//function - 함수형 변수
 	*/
 	
-	//자바스트립트 변수에는 객체 저장 가능 - 자료형 : object
+	//변수 선언 및 초기값 저장 5 - 자바스트립트 변수에는 객체 저장 가능 - 자료형 : object
 	//var obj=new Object();
 	//alert(typeof(obj));//object - 객체형 변수
 	</script>
