--- a/web/src/main/webapp/JS/09_argument.html
+++ b/web/src/main/webapp/JS/09_argument.html
@@ -12,8 +12,8 @@
 	
 	<script type="text/javascript">
 	/*
-	//매개변수는 var 키워드 없이 선언하면 지역변수로 처리된다.
-	function sum(num1, num2) {
+	//매개변수는 var 키워드 없이 선언하면 지역변수로 처리된다. (약속임. 문법.)
+	function sum(num1, num2) { //원래는 값이 유효한 값인지 검증도 해줘야함.(사용자 입력값인 경우.) 하지만 여기서는 사용자 입력값이 아니기때문에 검증 안헸음
 		alert("합계 = "+(num1+num2));
 	}
 	
@@ -23,11 +23,12 @@
 	
 	sum(10); //=> num2에 값 전달X => 결과 [합계=NaN] 출력됨
 	//=> 함수 매개변수의 갯수보다 적은 갯수의 값을 전달하여 함수 호출도 가능하다(NaN) (but,자바에서는 아예 함수 호출이 안되어 오류가 남)
-	//=> 값을 전달받지 못한 매개변수는 [undifined] 자료형의 변수로 처리 - 비정상적인 결과 제공됨(NaN)
+	//=> 값을 전달받지 못한 매개변수는 값이 없기 때문에 [undifined] 자료형의 변수로 처리됨 -> 비정상적인 결과 제공됨(NaN)
 	
 	sum(10,20,30);
 	//=> 매개변수의 갯수보다 적은 갯수의 값을 전달하여 함수 호출도 가능하다.
 	//=> 매개변수의 값이 차례대로 전달되어 저장되면 남은 값은 미사용처리된다. (여기서는 30이 해당됨.)
+	(남는 값이 버려지지는 않음. 사용만 안되고 argument 객체에 저장됨.)
 	*/
 	
 	
@@ -39,7 +40,7 @@
 		//alert("arguments.length"); //전달값의 갯수를 제공받아 출력
 		
 		var tot=0;
-		for(i=0;i<arguments.length;i++){
+		for(i=0;i<arguments.length;i++){ //배열이기 때문에 for문 사용가능~
 			tot+=arguments[i]; //전달값을 제공받아 변수에 누적 처리
 		}
 		alert("합계 = "+tot);
