--- a/web/src/main/webapp/JS/20_class.html
+++ b/web/src/main/webapp/JS/20_class.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>자바스크립트 객체</h1>
 	<hr>
-	<p>자바스크립트는 객체 지향 프로그래밍 언어로 객체를 이용하여 프로그램을 작성하는 언어</p>
+	<p>자바스크립트는 객체 지향 프로그래밍 언어(정확히는 객체 관점 프로그래밍 언어)로 객체를 이용하여 프로그램을 작성하는 언어</p>
 	<p>자바스크립트는 모든 값을 객체로 표현하여 처리</p>
 	<p>객체(Object) : 현실 세계에 존재하는 특정 대상을 프로그램에서 사용하기 위해 
 	프로퍼티(Property : 표현대상의 속성)와 메소드(Method : 표현대상의 행위)로 표현</p>
@@ -45,13 +45,14 @@
 	// => new 연산자로 클래스 함수를 호출하여 객체 생성하고 생성된 객체를 변수에 저장 - 객체변수
 	//형식)var 변수명 = new 클래스함수(값, 값, ...)
 	var student=new Student(1000, "홍길동", "서울시 강남구");
+	alert("student = "+student);	//student = [object Object]
 	//alert("변수의 자료형 = "+typeof(student));//변수의 자료형 = object
 	
 	//객체는 . 연산자를 사용하여 객체 요소(프로퍼터 또는 메소드)에 접근하여 사용 가능
 	//alert("학번 = "+student.num+", 이름 = "+student.name+", 주소 = "+student.address);
 	//student.display();//메소드 호출
 	
-	//. 연산자 대신 [] 연산자를 이용하여 객체에 접근 가능
+	//. 연산자 대신 [] 연산자를 이용하여 객체에 접근 가능 ([]안에 요소이름 넣으면됨.)
 	//=>자바스크립트에서는 객체의 요소에 접근할때도 [ ]를 사용할 수 있다.
 	//alert("학번 = "+student["num"]+", 이름 = "+student["name"]+", 주소 = "+student["address"]);
 	//student["display"]();
@@ -107,8 +108,9 @@
 	</script>
 
 <!-- 자바는 객체 안에는 프로퍼티만 있고 메소드는 클래스 안에 있음. -->
-<!-- 하지만 자바스크립트에는 객체 안에 프로퍼티와 메소드가 같이 들어 있음.
+<!-- 하지만 자바스크립트에는 객체(new연산자로 만든 객체) 안에 프로퍼티와 메소드가 같이 들어 있음.
 	(-> 따라서, 객체가 많이 만들어질수록 메소드가 많아짐) -->
+<!-- 하지만 JS에서도 class 키워드로 메소드를 선언하면 안에 메소드만 있음. => 이 경우 메소드의 공유가 불가능해짐. -->
 
 </body>
 </html>
