--- a/web/src/main/webapp/JS/03_variable2.html
+++ b/web/src/main/webapp/JS/03_variable2.html
@@ -20,7 +20,7 @@
 	*/
 	
 	
-	//let 키워드로 변수를 선언한 경우 동일한 이름의 변수 선언이 불가능하며 초기값 변경 가능
+	//let 키워드로 변수를 선언한 경우 동일한 이름의 변수 선언이 불가능하지만 초기값 변경은 가능
 	/*
 	let num=100;
 	alert("num = "+num);
@@ -37,8 +37,8 @@
 	const num=100; //= 상수 변수(Constant Variable)(=상수 : 리터럴 대신 이름 부여하기 위해 사용)
 	alert("num = "+num);
 	
-	const num=100;
-	num=200;
+	const num=100; //에러
+	num=200;	//에러 => 초기값 변경 불가능
 	alert("num = "+num);
 	*/
 	
