--- a/web/src/main/webapp/JS/21_prototype.html
+++ b/web/src/main/webapp/JS/21_prototype.html
@@ -14,21 +14,117 @@
 	모든 객체가 공유하여 사용할 수 있다.</p>
 	
 	<script type="text/javascript">
+	
+	/*
 	function Student(num, name, address){
 		this.num=num;
 		this.name=name;
 		this.address=address;
 		
 		this.display=function(){
-			alert("학번 = "+num+". 이름 = "+name+", 주소 = "+address);
+			alert("학번 = "+this.num+". 이름 = "+this.name+", 주소 = "+this.address);
 		}
-		this.setValue=Function(num, name. address){
+		this.setValue=function(num, name, address){
 			this.num=num;
 			this.name=name;
 			this.address=address;
-		}
-		
+		}	
 	}
+	
+	//생성된 객체마다 프로퍼티(인자)와 메소드를 따로 저장하고 있다.
+	var student1 = new Student (1000,"홍길동","서울시 강남구");
+	var student2 = new Student (2000,"임꺽정","서울시 종로구");
+	var student3 = new Student (3000,"전우치","서울시 동작구");
+	
+	//student1.display();
+	//student2.display();
+	student3.display();
+	
+	//=> 별로 권장하지 않는 방법
+	*/
+	
+	
+	//클래스 함수 선언할 때 프로퍼티만 생성한다.
+	function Student(num, name, address){
+		this.num=num;
+		this.name=name;
+		this.address=address;
+	}
+	
+	/*
+	//클래스 함수에 프로토타입 메소드를 추가한다.
+	Student.prototype.display=function(){
+		alert("학번 = "+this.num+". 이름 = "+this.name+", 주소 = "+this.address);
+	}
+	
+	Student.prototype.setValue=function(num, name, address) {
+		this.num=num;
+		this.name=name;
+		this.address=address;
+	}
+	*/
+	
+	Student.prototype={
+			"display" : function() {
+				alert("학번 = "+this.num+", 이름 = "+this.name+", 주소 = "+this.address);
+			},
+			"setValue" : function(num, name, address) {
+				this.num=num;
+				this.name=name;
+				this.address=address;
+			}
+		}
+	
+	/*
+	//생성된 객체에는 프로퍼티만 따로 저장되고 메소드는 하나만 생성되어 모든 객체가 공유해 사용가능하도록 만들어진다.
+	var student1 = new Student (1000,"홍길동","서울시 강남구");
+	var student2 = new Student (2000,"임꺽정","서울시 종로구");
+	var student3 = new Student (3000,"전우치","서울시 동작구");
+	
+	//student1.display();
+	//student2.display();
+	student3.display();
+	*/
+	
+	var student = new Student(1000,"홍길동","서울시 강남구");
+	//student.display();
+	//student.vetValue(2000,"임꺽정","서울시 종로구"); //값 수정
+		//JS에는 따로 setter가 없음. 접근제한자가 없기 때문에.
+	//student.display(); //바뀐 값 확인
+	
+	
+	//instnaceof 연산자 : ES6에서 추가된 연산자로 변수에 저장된 객체가 클래스 함수(클래스)에 접근하지 못할 경우
+	//[flase]를 제공하고 접근 가능한 경우[true]를 제공하는 연산자
+	//형식) 객체변수 instanceof 클래스
+	//alert(student instanceof Student);	 //출력 : true
+	
+	//in 연산자 : 객체의 요소를 확인하는 연산자. 객체의 요소가 아닌경우 [flase], 객체의 요소인 경우 [true]를 제공함.
+	//형식) "요소명" in 객체변수
+	//alert("num" in student);  //출력 : true
+	//alert("display" in student);  //출력 : true
+	//alert("Phone" in student);  //출력 : false
+	
+	//for 구문을 사용하여 객체 요소에 대한 일괄처리 가능
+	//형식) for(변수명 in 객체변수){ 명령; 명령; ...}
+	//=> 객체의 요소의 이름을 하나씩 제공받아 변수에 저장하여 반복 처리
+	for(variable in student){
+		//alert(variable); //num, name, address, display, setValue 가 적힌 창이 순서대로 하나씩 각각 나타남.
+		
+		//객체의 요소는 . 연산자가 아닌 []연산자를 사용하여 접근이 가능하다.
+		if(typeof(student[variable] != "function")){	//객체의 요소가 메소드(함수)가 아닌경우
+			alert("객체 속성값 = "+student[variable]);	
+		}			
+	}
+	
+	
+	//with 구문을 사용하여 블럭 내부에서 객체요소를 변수처럼 사용하는 기능 제공
+	//형식) with(객체변수){ 명령; 명령; ... }
+	with(student){
+		alert("학번 = "+num+". 이름 = "+name+", 주소 = "+address); //student. 생략 가능
+		//원래(정석) : alert("학번 = "+student.num+". 이름 = "+student.name+", 주소 = "+student.address);
+	}
+	
+	
 	</script>
 	
 
