--- a/web/src/main/webapp/JS/21_prototype.html
+++ b/web/src/main/webapp/JS/21_prototype.html
@@ -31,7 +31,7 @@
 		}	
 	}
 	
-	//생성된 객체마다 프로퍼티(인자)와 메소드를 따로 저장하고 있다.
+	//ㄱ.생성된 객체마다 프로퍼티(인자)와 메소드를 각각 따로 저장하고 있다.
 	var student1 = new Student (1000,"홍길동","서울시 강남구");
 	var student2 = new Student (2000,"임꺽정","서울시 종로구");
 	var student3 = new Student (3000,"전우치","서울시 동작구");
@@ -40,11 +40,11 @@
 	//student2.display();
 	student3.display();
 	
-	//=> 별로 권장하지 않는 방법
+	//=> 별로 권장하지 않는 방법(메모리 낭비되어 비효율적)
 	*/
 	
 	
-	//클래스 함수 선언할 때 프로퍼티만 생성한다.
+	//ㄴ-1. 클래스 함수 선언할 때 프로퍼티만 생성한다.
 	function Student(num, name, address){
 		this.num=num;
 		this.name=name;
@@ -52,7 +52,7 @@
 	}
 	
 	/*
-	//클래스 함수에 프로토타입 메소드를 추가한다.
+	//ㄴ-2. 클래스 함수에 프로토타입 메소드를 추가한다. (메모리낭비X. 효율적인 방법)
 	Student.prototype.display=function(){
 		alert("학번 = "+this.num+". 이름 = "+this.name+", 주소 = "+this.address);
 	}
@@ -109,6 +109,8 @@
 	//=> 객체의 요소의 이름을 하나씩 제공받아 변수에 저장하여 반복 처리
 	for(variable in student){
 		//alert(variable); //num, name, address, display, setValue 가 적힌 창이 순서대로 하나씩 각각 나타남.
+						//이때 variable은 요소의 이름을 반환하는 것이지 값을 반환한는게 아님.
+
 		
 		//객체의 요소는 . 연산자가 아닌 []연산자를 사용하여 접근이 가능하다.
 		if(typeof(student[variable] != "function")){	//객체의 요소가 메소드(함수)가 아닌경우
@@ -118,6 +120,7 @@
 	
 	
 	//with 구문을 사용하여 블럭 내부에서 객체요소를 변수처럼 사용하는 기능 제공
+	//=> but, ES6에서는 구조분해할당을 사용하기 때문에 잘 사용하지는 않는 문법임.
 	//형식) with(객체변수){ 명령; 명령; ... }
 	with(student){
 		alert("학번 = "+num+". 이름 = "+name+", 주소 = "+address); //student. 생략 가능
