--- a/web/src/main/webapp/JS/23_array.html
+++ b/web/src/main/webapp/JS/23_array.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Array 클래스 함수</h1>
 	<hr>
-	<p>자바스크립트에서는 배열도 객체
+	<p>자바스크립트에서는 배열도 객체</p>
 	<p>다수의 값(객체)를 저장하는 객체를 생성하기 위한 클래스 함수</p>
 	<p>Array 객체에 대한 프로퍼티와 메소드가 제공된다.</p>
 	
@@ -20,7 +20,7 @@
 	//alert(array,length); //출력 : 0
 	
 	alert(array.toString);  //객체 메소드를 호출하여 반환되는 값 출력 //=> 지금은 아무 값도 출력되지 않음.
-	//array.toString : Array 객체에 저장된 모든 요소값을 문자값으로 반환하는 메소드. 호출할 필요 없음
+	//Array.toString : Array 객체에 저장된 모든 요소값을 문자값으로 반환하는 메소드. 호출할 필요 없음
 	
 	//Array 객체를 저장한 변수를 출력할 경우 자동으로 toString() 메소드 호출한다. 따라서 따로 호출할 필요 없다.
 	*/
