--- a/web/src/main/webapp/JS/24_destructure.html
+++ b/web/src/main/webapp/JS/24_destructure.html
@@ -8,17 +8,20 @@
 	<h1>구조분해할당(Destructuring Assignment)</h1>
 	<hr>
 	<p>구조분해할당: Object 객체 또는 Array 객체의 요소를 해체하여 요소값을 개별적인 변경에 저장하여 제공하기 위한 기능</p>
+	<!-- ES6에서 추가된 기능 -->
+	<!-- 사용 이유 : 코드를 간단하게 하여 가독성을 높이기 위해 -->
 	
 	
 	<script type="text/javascript">
 	/*
 	var array=["홍길동","임꺽정","전우치"];
 	
+	//위의 배열의 요소를 일반변수에 하나씩 저장하고 싶을때,
 	//var one=array[0];
 	//var two=array[1];
 	//var three=array[2];
-	
-	//구조분해할당을 사용하여 Array 객체의 요소값을 차례대로 제공받아 변수에 저장
+	//이것보다는,↓
+	//구조분해할당을 사용하여 Array 객체의 요소값을 차례대로 제공받아 변수에 저장하는 것이 더 효율적
 	//형식)var [변수명,변수명,...] = Array객체
 	var [one, two, three] = array;
 	
@@ -31,7 +34,7 @@
 	*/
 	
 	/*
-	//Array 객체를 분리 할당할 경우 할당 받을 값이 없을 때 변수에 저장될 기본값 설정 가능
+	//Array 객체를 분리 할당할 경우 할당 받을 값이 없을 때 변수에 저장될 기본값(초기값) 설정도 가능
 	//var [one, two, three="일지매"] = ["홍길동","임꺽정","전우치"];
 	var [one, two, three="일지매"] = ["홍길동","임꺽정"];
 	
@@ -39,7 +42,8 @@
 	*/
 	
 	/*
-	//함수 선언시 매개변수에 전달된 값이 없는 경우 매개변수에 저장된 기본값 설정 가능
+	//함수 선언시 매개변수에 전달되어 저장되는 값이 없는 경우, 매개변수에 저장된 기본값 설정 가능
+	//전달되는 값이 있으면 기본값을 사용하지 않음.
 	function sum(num1=10, num2=20) {
 		return num1+num2;
 	}
@@ -53,7 +57,7 @@
 	var [num1, num2] = [10, 20];
 	//alert("num1 = "+num1+", num2 = "+num2);//num1 = 10, num2 = 20
 	
-	//두 변수에 저장된 값을 바꾸어 저장
+	//구조분해할당을 사용하면 두 변수에 저장된 값을 바꾸어 저장할때도 간단하게 사용 가능하다.
 	[num1, num2] = [num2, num1];
 	alert("num1 = "+num1+", num2 = "+num2);////num1 = 20, num2 = 10
 	*/
@@ -63,7 +67,7 @@
 		return [10, 20, 30];//Array 객체 반환
 	}
 	
-	//Array 객체를 반환받아 변수에 저장
+	//Array 객체를 반환받아 변수에 저장도 가능.
 	//var array=returnArray();
 	//alert(array[0]+", "+array[1]+", "+array[2]);//10, 20, 30
 	
@@ -75,7 +79,7 @@
 	//var [num1, , num2] = returnArray();
 	//alert(num1+", "+", "+num2);//10, 30
 	
-	//... 연산자(전개 연산자)를 사용하여 할당된 나머지 요소값들을 Array 객체로 전달받아 저장 
+	//...연산자(전개 연산자)를 사용하여 할당된 나머지 요소값들을 Array 객체로 전달받아 저장 
 	var [num1, ...num2] = returnArray();
 	alert("num1 = "+num1);//10
 	alert("num2 = "+num2);//20,30
@@ -86,13 +90,17 @@
 	var student={num:1000, name:"홍길동"};
 	//alert("학번 = "+student.num+", 이름 = "+student.name);
 	
+	//구조분해할당을 사용하여 Object 객체의 요소값을 차례대로 제공받아 변수에 저장하는 것이 더 효율적
+	//형식)var {변수명,변수명,...} = Array객체
+
+	
 	//Object 객체의 요소값을 구조 분해하여 개별적인 변수에 저장
 	// => 변수의 이름이 반드시 요소명과 동일하게 생성되도록 작성
-	//var [num, name] = student;
+	//var {num, name} = student;
 	//alert("학번 = "+num+", 이름 = "+name);
 	
 	//변수의 이름의 요소명이 다르게 설정된 경우 에러 발생
-	//var [number, name] = student;//에러 발생
+	//var {number, name} = student;//에러 발생
 	//alert("학번 = "+number+", 이름 = "+name);
 	
 	//변수의 이름를 요소명과 다르게 설정하여 사용 가능
