--- a/web/src/main/webapp/JS/41_event.html
+++ b/web/src/main/webapp/JS/41_event.html
@@ -22,7 +22,7 @@
 	<p>방법2. script 태그안에서 이벤트 처리함수를 생성해 호출한다.
 	
 	<p>방법3. 태그를 검색하여 Element 객체로 제공받아 Element 객체에 이벤트 리스너 속성의 이벤트 처리함수를 등록한다. 
-	-> 태그에서 이벤트 리서느 속성의 이벤트가 발생될 경우 이벤트 처리 함수가 호출된다.</p>
+	-> 태그에서 이벤트 리스너 속성의 이벤트가 발생될 경우 이벤트 처리 함수가 호출된다.</p>
 	<button type="button" id="eventBtn">버튼-2</button> 
 	
 	<script type="text/javascript">
