--- a/web/src/main/webapp/JS/34_document.html
+++ b/web/src/main/webapp/JS/34_document.html
@@ -8,6 +8,7 @@
 	<h1>BOM(Browser Object Model) - document 객체</h1>
 	<hr>
 	<p>document 객체 : 요청 웹프로그램의 실행결과를 브라우저에 출력하는 영역을 객체로 표현하여 프로퍼티와 메소드를 제공</p>
+	<!-- document는 DOM이 아님! BOM이다. -->
 	
 	<script type="text/javascript">
 	
