--- a/web/src/main/webapp/JS/35_onload.html
+++ b/web/src/main/webapp/JS/35_onload.html
@@ -10,20 +10,27 @@ function onload(){
 }
 //하지만 이 함수도 호출하지 않으면 소용없음. 호출은 body 태그에서 한다.
 
-//자바스크립트 객체에 이벤트 리스너 속성을 요소로하여
+//자바스트립트 객체에 이벤트 리스너 속성을 요소로 하여 이벤트 처리 함수 저장
+//=> 자바스트립트 객체에서 해당 이벤트가 발생될 경우 이벤트 처리 함수 호출
+
 window.onload=function(){
-//브라우저의가 온로드 됐다면, 명령 실행
+//브라우저가 온로드 됐다면, 명령 실행
+	alert("동적인 페이지를 구현하기 위해 HTML 태그 조작하는 명령 실행");
+
 	
 }
+
 </script>
 </head>
 <body onload="load();">
 <!-- body 태그의 onload 이벤트 리스너 속성 : 태그가 메모리에 저장된 경우 실행될 이벤트 처리 명령(자바스크립트)을 속성값으로 설정한다. -->
 <!-- body 태그가 메모리에 저장되면 자바스크립트의 load() 함수 호출 -->
+<!-- body onload = "load()"; -->
 <!-- 바디태그가 완성됐다는 것은 아래의 자식태그도 완성됐다는 뜻 -->
 	<h1>DOM(Document Object Model) - onload Event Listener</h1>
 	<!-- onload를 감시하는 것 -->
 	<hr>
+	<p>DOM 객체 : document 객체를 기반으로 제공되는 HTML 태그에 대한 자바스크립트 객체
 	<p>요청 웹프로그램의 실행결과를 웹문서로 전달받아 브라우저의 응답영역에 출력</p>
 	<p>브라우저는 DOM Parser를 사용하여 웹문서의 HTML 태그를 DOM Tree로 생성(꾸미기는 나중의 일)
 	- 자바스크립트는 DOM Tree의 THML 태그를 Element 객체로 제공받아 사용 가능하다.</p>
@@ -31,7 +38,7 @@ window.onload=function(){
 	<p>중요한 이유 : 자바스크립트를 사용하여 태그에서 이벤트가 발생될 경우 이벤트 처리함수를 사용하여
 	태그를 Element 객체로 제공받아 조작 가능 
 	-> 이를 이용해 동적인 페이지를 구현할 수 있다.(=DTHML : DynamicHTML)</p>
-	<p>반드시 DOM Tree가 완성된 후 동적인 페이지를 구현 가능하다.</p>
+	<p>반드시 DOM Tree가 완성된 후 동적인 페이지를 구현 가능하다. => onload 이벤트가 필요</p>
 	
 
 	<!-- body 태그의 마지막 자식 태그로 script 태그를 선언하면 onload 이벤트 리스너 속성을 이용하지 않아도 HTML 태그를 조작해서
