--- a/web/src/main/webapp/JS/36_element.html
+++ b/web/src/main/webapp/JS/36_element.html
@@ -7,8 +7,9 @@
 <body>
 	<h1>DOM(Document Object Model) - element 객체</h1>
 	<hr>
-	<p>Node 객체 : 태그(TagNode)와 태그 내용(TextNode)을 자바스크립트 객체로 표현</p>
+	<p>Node 객체 : 태그(TagNode)와 태그 내용(TextNode)을 묶어 자바스크립트 객체로 표현</p>
 	<p>Element 객체 : 태그(TagNode)만을 자바스크립트 객체로 표현</p>
+	<p>Text 객체 : 태그 내용(TextNode)만을 자바스크립트 객체로 표현</p>
 	<!-- Node 객체가 Element 객체보다 더 부모 개념. 갖고 있는 메소드는 거의 유사. 하지만 개념은 다름 -->
 	<hr>
 	<h2 id="headline">h2 태그에 의해 출력되는 내용</h2>
