--- a/web/src/main/webapp/JS/27_date.html
+++ b/web/src/main/webapp/JS/27_date.html
@@ -32,7 +32,7 @@
 	var birthday = new Date(2000, 0, 1);
 	//2000, 0, 1 = 2000년 1월 1일 0시 0분 0초임. (월이 0부터 시작하기 때문에 1월은 0으로 작성해 줘야함.)
 	
-	//Date.getTime() : Date 객체에 저장된 날짜와 시간에 대한 초단위(ms) 숫자값(TimeStamp)를 반환하는 
+	//Date.getTime() : Date 객체에 저장된 날짜와 시간에 대한 초단위(ms) 숫자값(TimeStamp)를 반환하는 메소드
 	var interval = (now.getTime()-birthday.getTime())/(1000*60*60*24);
 	//alert("당신은 오늘까지 "+interval+"일 살았습니다."); //결과값으로 초단위가 소숫점이 나옴.
 	alert("당신은 오늘까지 "+Math.ceil(interval)+"일 살았습니다."); //결과값으로 초단위가 소숫점이 나오지 않고 올림처리됨.
