--- a/web/src/main/webapp/JS/32_loaction.html
+++ b/web/src/main/webapp/JS/32_loaction.html
@@ -15,7 +15,7 @@
 	//loaction 객체를 출력하면 toString() : URL 주소를 입력하는 영역의 URL 주소를 반환하는 메소드
 	
 	/*
-	setTimeout(function(){
+	setTimeout(function(){ //**매우 중요함!
 		location.href="https://www.daum.net";
 		//location.href : location 객체의 URL 주소를 저장한 프로퍼티
 		//=> location 객체의 href 속성값을 변경하면 브라우저의 URL 주소가 속성값으로 변경되어 
