--- a/web/src/main/webapp/JS/33_history.html
+++ b/web/src/main/webapp/JS/33_history.html
@@ -15,8 +15,9 @@
 	setTimeout(function() {
 		history.back();  // history.go(-1); 과 동일
 		//history.back() : 이전페이지로 이동하는 메소드
+		//history.go(number) : 원하는 페이지로 이동하는 메소드
 		
-		history.forward(); // history.go(+1); 과 동일
+		history.forward(); // history.go(1); 과 동일
 		//history.forward(); : 다음페이지로 이동하는 메소드
 		
 		history.go(0); //loaction.reload() 메소드와 동일
