--- a/web/src/main/webapp/html/07_alink.html
+++ b/web/src/main/webapp/html/07_alink.html
@@ -9,9 +9,11 @@
 	<hr>
 	<!-- a 태그 : 클릭 이벤트로 다른 웹문서(웹프로그램)을 요청하기 위한 태그 - GET 방식의 요청(a 태그는 무조건)-->
 	<!-- => 하이퍼링크(Hyper Link) 기능을 제공하는 태그 - 페이지 이동 -->
+	<!-- => a는 anchor의 약자. 문장 안의 어떤 단어를 링크로 만들기 위해 사용된다. -->
 	<!-- href 속성 : 클릭 이벤트가 발생될 경우 요청한 웹문서(웹프로그램)의 URL 주소를 속성값으로 설정 -->
 	<!-- => 태그내용(텍스트 또는 이미지)을 클릭한 경우 클라이언트 브라우저의 주소창의 URL
 	주소가 href 속성값으로 변경되어 요청하고 웹문서(웹프로그램)의 결과를 응답받아 출력 -->
+	<!-- href(hypertext reference(하이퍼 텍스트 참조) -->
 	<a href="https://www.daum.net">다음</a>&nbsp;&nbsp;&nbsp;
 	<a href="https://www.naver.com">네이버</a>&nbsp;&nbsp;&nbsp;
 	<a href="https://www.google.com">구글</a>
@@ -19,7 +21,8 @@
 	<!-- 요청 URL 주소 뒤에 ? 기호를 붙이고 [이름=값&이름=값&...] 형식으로 요청 웹프로그램에게
 	값 전달 가능 - 질의문자열(QueryString)를 이용한 값 전달 -->
 	<a href="/web/html/07_kor.html?name=kim"><img alt="kor" src="/web/html/images/kor.png"></a>
-	<!-- target 속성 : _self(현재 브라우저 - 기본), _blank(새로운 브라우저), _top(최상위 브라우저)
+	<!-- target 속성 : 링크가 어떻게 열릴 것인지 지정함.
+	ex) _self(현재 브라우저 - 기본), _blank(새로운 브라우저), _top(최상위 브라우저)
 	, _parent(부모 브라우저), _child(자식 브라우저), 내부 브라우저(iframe 태그)의 name 속성값 -->	
 	<a href="07_eng.html" target="_blank"><img alt="eng" src="images/eng.png"></a>	
 </body>
