--- a/web/src/main/webapp/JS/41_event.html
+++ b/web/src/main/webapp/JS/41_event.html
@@ -19,7 +19,7 @@
 	<button type="button" onclock="alert('이벤트 처리 명령 실행')">버튼-1</button> 
 	<p>태그에서 이벤트 리스너 속성의 이벤트가 속성값으로 설정된 명령을 실행한다.</p>
 	
-	<p>방법2. script 태그안에서 이벤트 처리함수를 생성해 호출한다.
+	<p>방법2. script 태그안에서 이벤트 처리함수를 생성해 호출한다.</p>
 	
 	<p>방법3. 태그를 검색하여 Element 객체로 제공받아 Element 객체에 이벤트 리스너 속성의 이벤트 처리함수를 등록한다. 
 	-> 태그에서 이벤트 리스너 속성의 이벤트가 발생될 경우 이벤트 처리 함수가 호출된다.</p>
@@ -46,6 +46,7 @@
 	//이벤트(eventName)가 발생될 경우 콜백함수(이벤트 처리 함수)를 호출하는 메소드
 	document.getElementById("eventBtn3").addEventListener("click", function(e) {
 		alert('이벤트 처리 명령 실행-3');
+	}
 	
 	</script>
 
