--- a/web/src/main/webapp/JS/44_event_propagation.html
+++ b/web/src/main/webapp/JS/44_event_propagation.html
@@ -16,10 +16,10 @@ div{
 </style>
 </head>
 <body>
-	<h1>이벤트(Event) - 이벤트 흐름(Event Propagation)</h1>
+	<h1>이벤트(Event) - 이벤트 흐름(전달)(Event Propagation)</h1>
 	<hr>
 	<p>브라우저에서 이벤트가 발생되면 window 객체에 먼저 도착하고 DOM Tree를 이용하여 
-	이벤트가 발생된 태그에 도착한 후 다시 반대방향으로 이동하여 window 객체에 도착한 다음 소멸된다.</p>
+	이벤트가 발생된 타겟태그에 도착한 후 다시 반대방향으로 이동하여 window 객체에 도착한 다음 소멸된다.</p>
 	<p>이벤트가 흘러가는 과정을 캡쳐링 단계와 버블링 단계로 구분</p>
 	<p>캡쳐링(Capturing) 단계 : 이벤트가 window 객체에서 타겟 객체(이벤트가 발생된 태그)까지 전달되는 과정</p>
 	<p>버블링(Bubbling)단계 :이벤트가 타겟 객체(이벤트가 발생된 태그)로부터 window 객체까지 모든 객체에 이벤트가 전달되는 과정
