--- a/web/src/main/webapp/JS/41_event.html
+++ b/web/src/main/webapp/JS/41_event.html
@@ -20,13 +20,20 @@
 	<p>태그에서 이벤트 리스너 속성의 이벤트가 속성값으로 설정된 명령을 실행한다.</p>
 	
 	<p>방법2. script 태그안에서 이벤트 처리함수를 생성해 호출한다.</p>
+	<button type="button" onclick="eventHandle();">버튼-1</button>
+	
 	
 	<p>방법3. 태그를 검색하여 Element 객체로 제공받아 Element 객체에 이벤트 리스너 속성의 이벤트 처리함수를 등록한다. 
-	-> 태그에서 이벤트 리스너 속성의 이벤트가 발생될 경우 이벤트 처리 함수가 호출된다.</p>
+	-> 태그에서 이벤트 리스너 속성의 이벤트가 발생될 경우 이벤트 처리 함수가 호출된다.
+	 (일반적으로 가장 많이 사용하는 방법!)</p>
+	<button type="button" id="eventBtn2">버튼-2</button>
+	
 	
 	<p>방법4. 태그를 검색하여 Element 객체로 제공받아 addEventListener() 메소드를 호출하여 이벤트 처리 함수 등록
-		 - 태그에서 addEventListener() 메소드의 이벤트가 발생될 이벤트 처리 함수를 호출한다.</p>
+	-> 태그에서 addEventListener() 메소드의 이벤트가 발생될 경우 이벤트 처리 함수를 호출한다. (가장 정석적인 방법)</p>
 	<button type="button" id="eventBtn">버튼-2</button> 
+	<button type="button" id="eventBtn3">버튼-3</button>
+	
 	
 	<script type="text/javascript">
 	
@@ -36,7 +43,7 @@
 	} 
 	
 	//방법3의 이벤트 처리명령 - 자바스크립트만 이용한 것(유지보수에는 이 방법이 가장 효율적)
-	//Element 객체의 이벤트 리스너 속성에 이벤트 처리 함수 저장(등록)
+	//Element 객체의 이벤트 리스너 속성에 이벤트 처리 함수 저장(등록) (일반적으로 가장 많이 사용하는 방법!)
 	document.getElementById("eventBtn").onclick= function() {
 		alert('이벤트 처리 명령 실행-2');
 	}
@@ -44,6 +51,7 @@
 	//방법4의 이벤트 처리 명령 
 	//Node.addEventListener(eventName, callback[, useCapture]) : Node(Element) 객체에서
 	//이벤트(eventName)가 발생될 경우 콜백함수(이벤트 처리 함수)를 호출하는 메소드
+	//이때 이벤트 이름에는 on-이 들어가지 않음.(onclick(X), click(O))
 	document.getElementById("eventBtn3").addEventListener("click", function(e) {
 		alert('이벤트 처리 명령 실행-3');
 	}
