--- a/web/src/main/webapp/JS/42_event_this.html
+++ b/web/src/main/webapp/JS/42_event_this.html
@@ -44,6 +44,7 @@ ul li {
 		//document.getElementById("displayDiv").style="color: green;";//div 태그의 style 속성값 변경
 		
 		//this 키워드에는 이벤트가 발생된 태그의 Node(Element) 객체가 자동 저장
+		//this. == document.getElementById("displayDiv")
 		this.style="color: green;";//div 태그의 style 속성값 변경
 	}
 	
@@ -66,13 +67,14 @@ ul li {
 	}
 	*/
 	
-	for(i=0;i<liList.length;i++) {//i 변수에 3이 저장되면 반복문 종료
+	for(i=0;i<liList.length;i++) {//i 변수에 3이 저장되면 반복문 종료(0~2까지 3개니까)
 		//NodeList 객체에 저장된 모든 Node(Element) 객체의 이벤트 리스너 속성에 이벤트 처리 함수 등록
 		// => 이벤트 처리 함수는 Node(Element) 객체에서 이벤트가 발생되면 호출되어 실행
 		liList.item(i).onclick=function() {
-			//반복문이 종료된 후 이벤트가 발생될 경우에 실행되는 명령
+			//곧바로 실행되는게 아니라, 반복문이 종료된 후 해당 이벤트가 발생될 경우에 실행되는 명령
 			//liList.item(i).style="color: orange;";//liList.item(3) >> null
-			
+				//i에 3이 들어가는 이유 = for문이 끝난 후 들어가는 숫자이기 때문에 3이 들어가게됨. => 하지만 3은 없는 요소이기 때문에 null이 됨.(여기서는 요소가 없다라고 출력될 것.)
+				//따라서 이 코드를 사용하는 게 아니라 아래의 코드(this)를 사용한다. => this 사용안하면 이벤트처리 명령이 제대로 동작되지 않는다.
 			this.style="color: orange;";
 		}
 	}
