--- a/web/src/main/webapp/JS/43_event_default.html
+++ b/web/src/main/webapp/JS/43_event_default.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>이벤트(Event) - 태그의 기본 이벤트 처리 기능</h1>
 	<hr>
-	<p>태그는 특정 이벤트에 대한 처리 기능을 제공한다. - a태그, input태그</p>
+	<p>태그는 특정 이벤트에 대한 처리 기능을 제공한다. - a태그, input태그, button태그, form태그 등</p>
 	<hr>
 	<button type="button" id="btn">다음(Daum) 이동</button>
 	<hr>
