--- a/web/src/main/webapp/JS/46_event_DHTML.html
+++ b/web/src/main/webapp/JS/46_event_DHTML.html
@@ -13,6 +13,7 @@
 	<h1>이벤트(Event) - DHTML</h1>
 	<hr>
 	<p>DHTML(Dynamic HTML) : 브라우저에서 이벤트가 발생될 경우 브라우저에 출력된 태그를 변경하여 동적인 페이지를 제공하는 방법이다.</p>
+	<!-- 이럴때, 1. 이벤트 처리, 2.태그 변경 이 필요! -->
 	<hr>
 	<button type="button" id="addBtn">아이템 추가</button>
 	<div id="itemListDiv"></div>
