--- a/web/src/main/webapp/JS/50_cookie.html
+++ b/web/src/main/webapp/JS/50_cookie.html
@@ -10,7 +10,7 @@
 	<p>쿠키 : 서버와 클라이언트의 연결 지속성을 제공하기 위해 클라이언트에 저장되는 문자값</p>
 	<p>클라이언트에 접속된 웹서버의 이름을 식별자로 사용하여 다수의 쿠키를 저장해 웹서버의 웹프로그램을 요청시 쿠키에 저장된 값을 전달</p>
 	<hr>
-	<form name="cookeForm">
+	<form name="cookieForm">
 	아이디 : <input type="text" name="id">&nbsp;&nbsp;
 	<button type="button" id="saveBtn">입력 아이디 저장</button>
 	<button type="button" id="useBtn">저장 아이디 사용</button>
@@ -19,10 +19,10 @@
 	
 	<script type="text/javascript">
 	//1. 클라이언트에 쿠키를 저장(변경)하는 함수 만들기
-	// => 쿠키에는 필요한 정보를 이름과 값으로 하나로 묶어 하나로 저장가능
+	// => 쿠키에는 필요한 정보를 이름과 값으로 묶어 하나로 저장가능
 	// => 쿠키에 저장되는 정보는 ;을 이용하여 구분하여 여러개 저장가능하다.
 	// => 쿠키에는 필수정보로 쿠키명과 쿠키값을 묶어 반드시 저장(매개변수를 이용하여 쿠키의 이름(name)과 값(value)을 전달받아 저장)
-	// => 
+	// => 쿠키의 선택 정보로 적용범위, 도메인, 지속시간 등을 저장 - 선택 정보를 저장하지 않을 경우 기본값 사용
 	
 	function setCookie(name, value, path, expires) {
 		var sc = ""; //쿠키를 저장하기 위한 변수
