--- a/web/src/main/webapp/jQuery/19_scroll_event.html
+++ b/web/src/main/webapp/jQuery/19_scroll_event.html
@@ -35,6 +35,8 @@
 		if(scrollH >= docH){ //스크롤이 document 객체의 마지막에 위치한 경우,(=맨 끝까지 스크롤이 내려왔을때)
 			displayImage();
 		}
+		
+		//무한게시글 스크롤=> 인스타나 페북에서 사용
 	});
 	</script>
 
