--- a/web/src/main/webapp/JS/50_cookie.html
+++ b/web/src/main/webapp/JS/50_cookie.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>쿠키(Cookie)</h1>
 	<hr>
-	<p>쿠키 : 서버와 클라이언트의 연결 지속성을 제공하기 위해 클라이언트에 저장되는 문자값</p>
+	<p>쿠키 : 서버(웹프로그램)와 클라이언트(브라우저)의 연결 지속성을 제공하기 위해 클라이언트에 저장되는 문자값</p>
 	<p>클라이언트에 접속된 웹서버의 이름을 식별자로 사용하여 다수의 쿠키를 저장해 웹서버의 웹프로그램을 요청시 쿠키에 저장된 값을 전달</p>
 	<hr>
 	<form name="cookieForm">
